feat: todos los endpoints terminados